Chi2 statistical feature selection

--- a/Feature Selection.ipynb
+++ b/Feature Selection.ipynb
@@ -495,6 +495,112 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# 3) Chi2 Statistical Analysis\n",
+    "- Recall that the chi-square test measures dependence between stochastic variables, so using this function “weeds out” the features that are the most likely to be independent of class and therefore irrelevant for classification. The Chi Square statistic is commonly used for testing relationships between categorical variables.\n",
+    "- This score should be used to evaluate categorical variables in a classification task.\n",
+    "- It compares the observed distribution of the different classes of target Y among the different categories of the feature, against the expected distribution of the target classes, regardless of the feature categories."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      sex embarked  alone  pclass  survived\n",
+      "0    male        S  False       3         0\n",
+      "1  female        C  False       1         1\n",
+      "2  female        S   True       3         1\n",
+      "3  female        S  False       1         1\n",
+      "4    male        S   True       3         0\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column    Non-Null Count  Dtype \n",
+      "---  ------    --------------  ----- \n",
+      " 0   sex       891 non-null    object\n",
+      " 1   embarked  889 non-null    object\n",
+      " 2   alone     891 non-null    bool  \n",
+      " 3   pclass    891 non-null    int64 \n",
+      " 4   survived  891 non-null    int64 \n",
+      "dtypes: bool(1), int64(2), object(2)\n",
+      "memory usage: 28.8+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import seaborn as sns\n",
+    "import numpy as np\n",
+    "df=sns.load_dataset('titanic')\n",
+    "df=df[['sex','embarked','alone','pclass','survived']]\n",
+    "print(df.head())\n",
+    "print(df.info())"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "df['alone']=np.where(df['alone']==True,1,0)\n",
+    "ordinal_label = {k: i for i, k in enumerate(df['embarked'].unique(), 0)}\n",
+    "df['embarked'] = df['embarked'].map(ordinal_label)\n",
+    "df['sex']=np.where(df['sex']==\"male\",1,0)\n",
+    "X_train,X_test,y_train,y_test=train_test_split(df[['sex','embarked','alone','pclass']],\n",
+    "                                              df['survived'],test_size=0.3,random_state=100)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "sex         5.306038e-16\npclass      2.755149e-06\nembarked    5.999221e-03\nalone       9.696105e-04\ndtype: float64"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import chi2\n",
+    "f_p_values=chi2(X_train,y_train)\n",
+    "p_values=pd.Series(f_p_values[1])\n",
+    "p_values.index=X_train.columns\n",
+    "p_values.sort_index(ascending=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
