--- a/Outlier detection.ipynb
+++ b/Outlier detection.ipynb
@@ -2,14 +2,133 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     id                                              name  host_id  \\\n",
+      "0  2539                Clean & quiet apt home by the park     2787   \n",
+      "1  2595                             Skylit Midtown Castle     2845   \n",
+      "2  3647               THE VILLAGE OF HARLEM....NEW YORK !     4632   \n",
+      "3  3831                   Cozy Entire Floor of Brownstone     4869   \n",
+      "4  5022  Entire Apt: Spacious Studio/Loft by central park     7192   \n",
+      "\n",
+      "     host_name neighbourhood_group neighbourhood  latitude  longitude  \\\n",
+      "0         John            Brooklyn    Kensington  40.64749  -73.97237   \n",
+      "1     Jennifer           Manhattan       Midtown  40.75362  -73.98377   \n",
+      "2    Elisabeth           Manhattan        Harlem  40.80902  -73.94190   \n",
+      "3  LisaRoxanne            Brooklyn  Clinton Hill  40.68514  -73.95976   \n",
+      "4        Laura           Manhattan   East Harlem  40.79851  -73.94399   \n",
+      "\n",
+      "         room_type  price  minimum_nights  number_of_reviews last_review  \\\n",
+      "0     Private room    149               1                  9  2018-10-19   \n",
+      "1  Entire home/apt    225               1                 45  2019-05-21   \n",
+      "2     Private room    150               3                  0         NaN   \n",
+      "3  Entire home/apt     89               1                270  2019-07-05   \n",
+      "4  Entire home/apt     80              10                  9  2018-11-19   \n",
+      "\n",
+      "   reviews_per_month  calculated_host_listings_count  availability_365  \n",
+      "0               0.21                               6               365  \n",
+      "1               0.38                               2               355  \n",
+      "2                NaN                               1               365  \n",
+      "3               4.64                               1               194  \n",
+      "4               0.10                               1                 0  \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "(48895, 16)"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    ""
+    "import pandas as pd\n",
+    "df = pd.read_csv('data/outlier_detection_data.csv')\n",
+    "print(df.head())\n",
+    "df.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Detect Outliers using percentile\n",
+    "1. Find min and max threshold\n",
+    "2. Remove all rows that are too low and too high or to change it with threshold"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(43631, 16)"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_thresold, max_thresold = df.price.quantile([0.05,0.95])\n",
+    "df2 = df[(df.price>min_thresold)&(df.price<max_thresold)]\n",
+    "df2.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "count    43631.000000\nmean       128.201187\nstd         70.515988\nmin         41.000000\n25%         72.000000\n50%        109.000000\n75%        169.000000\nmax        353.000000\nName: price, dtype: float64"
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.price.describe()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
