Text normalization added

--- a/Text Preprocessing.ipynb
+++ b/Text Preprocessing.ipynb
@@ -159,16 +159,57 @@
    }
   },
   {
-   "cell_type": "code",
-   "source": [],
+   "cell_type": "markdown",
+   "source": [
+    "# Token Normalization:\n",
+    "#### We may want to see the same tokens for different forms of the word:\n",
+    "    - wolf, wolves -> wolf\n",
+    "    - talk, talks -> talk\n",
+    "#### Stemming:\n",
+    "    - A process of removing and replacing suffixes to get to\n",
+    "    the root form of the word, which is known as stemm\n",
+    "#### Lemmatazation:\n",
+    "    - Returns the base or dictionary from a word,\n",
+    "    which is known as lemma"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% \n"
+     "name": "#%% md\n"
     }
-   },
-   "execution_count": null,
-   "outputs": []
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sentence:  feet wolves cats talked\n",
+      "Stemming sentence: feet wolv cat talk\n",
+      "Lemmatize sentece: foot wolf cat talked\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"feet wolves cats talked\"\n",
+    "tokenizer = nltk.tokenize.TreebankWordTokenizer()\n",
+    "tokens = tokenizer.tokenize(text)\n",
+    "\n",
+    "stemm = nltk.stem.PorterStemmer()\n",
+    "lemma = nltk.stem.WordNetLemmatizer()\n",
+    "print(\"Sentence: \", text)\n",
+    "print(f\"Stemming sentence: {' '.join(stemm.stem(token) for token in tokens)}\")\n",
+    "print(f\"Lemmatize sentece: {' '.join(lemma.lemmatize(token) for token in tokens)}\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
