added removing stop words in text preprocessing

--- a/Text Preprocessing.ipynb
+++ b/Text Preprocessing.ipynb
@@ -135,13 +135,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Splitting on punctuation: ['This', 'is', 'my', 'friend', \"'\", 's', 'text', '!']\n",
+      "Splitting on punctuation: ['feet', 'wolves', 'cats', 'talked']\n",
       "\n"
      ]
     }
@@ -150,6 +150,47 @@
     "#WordPunctTokenization\n",
     "word_punct_tokens = nltk.tokenize.WordPunctTokenizer().tokenize(text)\n",
     "print(f\"Splitting on punctuation: {word_punct_tokens}\\n\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Removing stop words:\n",
+    "- “Stop words” are the most common words in a language like “the”, “a”, “on”, “is”, “all”. These words do not carry important meaning and are usually removed from texts."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['NLTK', 'leading', 'platform', 'building', 'Python', 'programs', 'work', 'human', 'language', 'data', '.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.corpus import stopwords\n",
+    "input_str = \"NLTK is a leading platform for building Python programs to work with human language data.\"\n",
+    "stop_words = set(stopwords.words(\"english\"))\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "tokens = word_tokenize(input_str)\n",
+    "result = [i for i in tokens if not i in stop_words]\n",
+    "print (result)"
    ],
    "metadata": {
     "collapsed": false,
