Added more information for feature extraction techniques

--- a/NLP/Feature Extraction From Text.ipynb
+++ b/NLP/Feature Extraction From Text.ipynb
@@ -11,8 +11,9 @@
    "source": [
     "# Bag of words (BOW)\n",
     "1. Counts occurences of particular token in text\n",
-    "2. For each token we will have a feature column, this is called **text vectorization**\n",
-    "3. Problems:\n",
+    "2. is a statistical language model used to analyze text and documents based on word count.\n",
+    "3. For each token we will have a feature column, this is called **text vectorization**\n",
+    "4. Problems:\n",
     "    1. we lose word order\n",
     "    2. counter are not normalized"
    ]
@@ -54,8 +55,10 @@
    "source": [
     "# TF-IDF\n",
     "1. A high weight in TF-IDF is reached by a high term frequency in a given document and a low document frequency of the term in the whole collection of document\n",
-    "2. TF - frequency of term (or n-gram) *t* in document *d*\n",
-    "3. IDF - inverse document frequency"
+    "2. Term frequency-inverse document frequency is a numerical statistic used to indicate how important a word is to each document in a collection of documents, or a corpus.\n",
+    "3. TF - frequency of term (or n-gram) *t* in document *d*\n",
+    "4. IDF - inverse document frequency is a measure of how often a word appears in the overall corpus. \n",
+    "5. When applying tf-idf to a corpus, each word is given a tf-idf score for each document, representing the relevance of that word to the particular document. A higher tf-idf score indicates a term is more important to the corresponding document."
    ],
    "metadata": {
     "collapsed": false
