--- a/QuickDA/Data Cleaning.ipynb
+++ b/QuickDA/Data Cleaning.ipynb
@@ -89,11 +89,50 @@
   },
   {
    "cell_type": "markdown",
-   "source": [],
+   "source": [
+    "# Drop duplicated values"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3953, 25)\n",
+      "(3953, 25)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_duplicates = clean(df, method='duplicates')\n",
+    "print(df.shape)\n",
+    "print(df_duplicates.shape)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
