--- a/QuickDA/Data Cleaning.ipynb
+++ b/QuickDA/Data Cleaning.ipynb
@@ -163,6 +163,49 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Remove Outliers\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'Loan Amount'\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "(3953, 25)"
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_remove_outliers = clean(df, method='outliers', columns=['Loan Amount'])\n",
+    "df_remove_outliers.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
