--- a/Statistics/Regression Analysis.ipynb
+++ b/Statistics/Regression Analysis.ipynb
@@ -272,6 +272,92 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Using Linear Regression with multiple variables\n",
+    "# Requirements:\n",
+    "1. The same as a simple Linear Model\n",
+    "2. Check MultiCollinearity"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coefficient for metro_res is -0.013833927739397426 \n",
+      "Coefficient for white is -0.11042925429187092 \n",
+      "Coefficient for poverty is -0.6815051009892369 \n",
+      "Coefficient for female_house is -0.9591234800545586 \n",
+      "Intercept:  114.92770568279465\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = df.drop([\"state\", \"hs_grad\"], axis=1)\n",
+    "y = df['hs_grad']\n",
+    "multi_reg = LinearRegression().fit(x, y)\n",
+    "coefs = multi_reg.coef_\n",
+    "inter = multi_reg.intercept_\n",
+    "for i, column in enumerate(x.columns):\n",
+    "    print(f\"Coefficient for {column} is {coefs[i]} \")\n",
+    "print(\"Intercept: \", inter)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Regression with multiple parameters helps us to understand the relationship of each variable with y provided that the rest of the variables remain the same"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# In Linear Regression we wont achieve false relationships which could be explaind by third variable"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "r_square = multi_reg.score(x, y)\n",
+    "print(\"R-Square = \", r_square)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 23,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-Square =  0.6953454956536218\n"
+     ]
+    }
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
